Update R4DS book url to its 2nd edition
- It updates R4DS book url to its 2nd edition([https://r4ds.hadley.nz/(https://r4ds.hadley.nz/)) in the README and in the syllabus.

Thank you for the great notes and videos!

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -158,7 +158,7 @@ organizing these materials):
 
 \begin{itemize}
 \item Introduction to Base R: \url{https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf}
-\item R for Data Science: \url{https://r4ds.had.co.nz/}
+\item R for Data Science: \url{https://r4ds.hadley.nz/}
 \item Guidance on Data Visualization: \url{https://socviz.co/}
 \end{itemize}
 
