--- a/homework/homework8.tex
+++ b/homework/homework8.tex
@@ -108,12 +108,13 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
     using the observations that are within the bandwidth picked by the
     \texttt{rdrobust} command (hint this should be under 11, and is
     called \texttt{h}) and omitting observations where
-    \texttt{firstmonth} = 1. How does your point estimate of
+    \texttt{firstmonth} = 1.
+  \end{enumerate}
+  How does your point estimate of
     $\gamma_{2}$ compare to the \texttt{rdrobust} estimate? Explain.
   \item Explain, in words, how you could get the \texttt{rdrobust}
     estimate that uses the triangular kernel using OLS (hint: it would
     involve weights)
-  \end{enumerate}
 \end{enumerate}
 % \item PART II (Testing Across Estimators) Now we want to compare
 %   estimated effects on Male vs. Female drivers. We will replicate
