--- a/lectures/23_machine_learning_1.tex
+++ b/lectures/23_machine_learning_1.tex
@@ -392,7 +392,7 @@
 
 \begin{frame}{What is supervised learning / ML?}
   \begin{wideitemize}
-  \item In essenece, we are interested in $f(X) = E(Y | X)$
+  \item In essence, we are interested in $f(X) = E(Y | X)$
     \begin{itemize}
     \item This is exactly the same problem as our non-parametric regression question!
     \item However, in that setting, I told you to give up as soon as $dim(X)$ got large because of data issues
