--- a/lectures/01_po_dags.tex
+++ b/lectures/01_po_dags.tex
@@ -564,8 +564,7 @@ the data''\\
 \begin{columns}[T] % align columns
   \begin{column}{.5\textwidth}
     \begin{wideitemize}
-    \item We can also allow for the unobservable $U$, which drove
-      identification concerns above
+    \item We can also allow for the unobservable $U$, which drove the identification concerns above
     \item In this case, $U$ is termed a \emph{confounder}. Why?
     \item Examine the paths by which $D$ links to $Y$:
       \begin{itemize}
