--- a/syllabus.tex
+++ b/syllabus.tex
@@ -68,19 +68,19 @@ morekeywords={__global__, __device__},  % CUDA specific keywords
 {\Large \textsc{MGMT 737: Applied Empirical Methods}}
 \end{center}
 \begin{center}
-Spring 2023
+Spring 2024
 \end{center}
 %\date{September 26, 2014}
 
 \begin{center}
-\rule{6in}{0.4pt}
+\rule{6.5in}{0.4pt}
 \begin{minipage}[t]{.75\textwidth}
-\begin{tabular}{llcccll}
-\textbf{Instructor:} & Paul Goldsmith-Pinkham & & &  & \textbf{Time:} & TTh, 2:40-4pm  \\
-\textbf{Email:} &  \href{mailto:paul.goldsmith-pinkham@yale.edu}{paul.goldsmith-pinkham@yale.edu} & & & &  & 
+\begin{tabular}{llccll}
+\textbf{Instructor:} & Paul Goldsmith-Pinkham & & &   \textbf{Time:} & TTh, 2:40-4pm  \\
+\textbf{Email:} &  \href{mailto:paul.goldsmith-pinkham@yale.edu}{paul.goldsmith-pinkham@yale.edu} & & & \textbf{Location:} & Evans Hall 4230 
 \end{tabular}
 \end{minipage}
-\rule{6in}{0.4pt}
+\rule{6.5in}{0.4pt}
 \end{center}
 \vspace{.5cm}
 \setlength{\unitlength}{1in}
@@ -89,7 +89,7 @@ Spring 2023
 
 \noindent\textbf{Course Pages:} \begin{enumerate}
 \item \url{https://github.com/paulgp/applied-methods-phd}
-\item \url{https://yale.instructure.com/courses/64286} [Yale students only]
+\item \url{https://yale.instructure.com/courses/95817} [Yale students only]
 \end{enumerate}
 
 \vskip.15in
